feat: add header section with navigation bar

--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            <div class="logo">d-user11</div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact me</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
