feat: add service section

--- a/index.html
+++ b/index.html
@@ -44,5 +44,27 @@
                 </div>
             </div>
         </section>
+        <section class="services">
+            <h1>Services</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus odio eum nisi, dolore earum officia laborum eligendi, iusto voluptatibus quisquam, inventore aspernatur nihil id libero cupiditate sit? Doloribus, sint ipsa!</p>
+            <div class="container">
+                <div class="card">
+                    <div class="number">1</div>
+                    <div class="content">
+                        <h1>Dinosaur</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad inventore culpa et sed, similique beatae impedit libero voluptatem dolores ab autem eius officia.</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="number">2</div>
+                    <div class="content">
+                        <h1>Eat things</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad inventore culpa et sed, similique beatae impedit libero voluptatem dolores ab autem eius officia.</p>
+                        <button>Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
