feat: add contact-me section

--- a/index.html
+++ b/index.html
@@ -66,5 +66,9 @@
                 </div>
             </div>
         </section>
+        <section class="contact-me">
+            <p>If you have any sugestions about anything</p>
+            <button>Fuck off</button>
+        </section>
     </body>
 </html>
