feat: add footer section

--- a/index.html
+++ b/index.html
@@ -70,5 +70,21 @@
             <p>If you have any sugestions about anything</p>
             <button>Fuck off</button>
         </section>
+        <footer>
+            <div class="vertical-container">
+                <div class="logo-name">
+                    <div class="logo">d-user11</div>
+                    <div class="name">No name</div>
+                </div>
+                <p>I won't make anything asap. Don't contact me and we won't work together.</p>
+                <div class="icons">
+                    <img src="images/icons8-github-48.png" alt="github">
+                    <img src="images/icons8-gmail-logo-48.png" alt="gmail">
+                    <img src="images/icons8-twitterx-48.png" alt="x">
+                    <img src="images/icons8-angry-face-meme-48.png" alt="angry face">
+                </div>
+            </div>
+            <p>Copyright &copy; The Odin Project 2021</p>
+        </footer>
     </body>
 </html>
