feat: add hero section

--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
                 </ul>
             </nav>
         </header>
+        <section class="hero">
+            <div class="text-container">
+                <h1>Hello, I'm d-user11</h1>
+                <p>...</p>
+                <div class="buttons">
+                    <button>Do not hire me</button>
+                    <button>Ignore CV</button>
+                </div>
+            </div>
+            <img src="images/dyno.png" alt="dinosaur eating men">
+        </section>
     </body>
 </html>
