feat: add about-me section

--- a/index.html
+++ b/index.html
@@ -27,5 +27,22 @@
             </div>
             <img src="images/dyno.png" alt="dinosaur eating men">
         </section>
+        <section class="about-me">
+            <div class="container">
+                <img src="images/dyno.png" alt="dinosaur eating men">
+                <div class="text-container">
+                    <h1>About me</h1>
+                    <div class="jobs">
+                        <p>Dinosaur</p>
+                        <p>Eat things</p>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sint alias, illum fugit at consequuntur iste nostrum nesciunt earum commodi doloribus dicta exercitationem incidunt velit est totam distinctio similique reiciendis!</p>
+                    <div class="buttons">
+                        <button>Do not hire me</button>
+                        <button>Ignore CV</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
