--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <section class="hero">
             <div class="text-container">
                 <h1>Hello, I'm d-user11</h1>
-                <p>...</p>
+                <p>I am <s>not</s> a dinosaur.</p>
                 <div class="buttons">
-                    <button>Do not hire me</button>
-                    <button>Ignore CV</button>
+                    <button>Hire</button>
+                    <button>Request CV</button>
                 </div>
             </div>
             <img src="images/dyno.png" alt="dinosaur eating men">
@@ -33,13 +33,13 @@
                 <div class="text-container">
                     <h1>About me</h1>
                     <div class="jobs">
-                        <p>Dinosaur</p>
+                        <p>Scare people</p>
                         <p>Eat things</p>
                     </div>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sint alias, illum fugit at consequuntur iste nostrum nesciunt earum commodi doloribus dicta exercitationem incidunt velit est totam distinctio similique reiciendis!</p>
                     <div class="buttons">
-                        <button>Do not hire me</button>
-                        <button>Ignore CV</button>
+                        <button>Hire</button>
+                        <button>Request CV</button>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 <div class="card">
                     <div class="number">1</div>
                     <div class="content">
-                        <h1>Dinosaur</h1>
+                        <h1>Scare people</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad inventore culpa et sed, similique beatae impedit libero voluptatem dolores ab autem eius officia.</p>
                         <button>Learn More</button>
                     </div>
@@ -68,7 +68,7 @@
         </section>
         <section class="contact-me">
             <p>If you have any sugestions about anything</p>
-            <button>Fuck off</button>
+            <button>Contact me</button>
         </section>
         <footer>
             <div class="vertical-container">
@@ -76,7 +76,7 @@
                     <div class="logo">d-user11</div>
                     <div class="name">No name</div>
                 </div>
-                <p>I won't make anything asap. Don't contact me and we won't work together.</p>
+                <p>If you want my help or have some suggestions. Please contact me.</p>
                 <div class="icons">
                     <img src="images/icons8-github-48.png" alt="github">
                     <img src="images/icons8-gmail-logo-48.png" alt="gmail">
